--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,10 +1,6 @@
-# If you come from bash you might have to change your $PATH.
-# export PATH=$HOME/bin:/usr/local/bin:$PATH
-export PATH=/opt/homebrew/bin:$PATH
-
-# Path to your oh-my-zsh installation.
 export ZSH="$HOME/.oh-my-zsh"
 ZSH_THEME="powerlevel10k/powerlevel10k"
+
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
@@ -21,6 +17,10 @@ plugins=(
 # "Insecure completion-dependent directories detected"
 ZSH_DISABLE_COMPFIX="true"
 
+# Auto updates will cause the ~/.oh-my-zsh directory to drift out of sync with chezmoi's source state.
+# To update Oh My Zsh and its plugins, refresh the downloaded archives.
+DISABLE_AUTO_UPDATE="true"
+
 source $ZSH/oh-my-zsh.sh
 
 # User configuration
@@ -30,9 +30,17 @@ source $ZSH/oh-my-zsh.sh
 # You may need to manually set your language environment
 # export LANG=en_US.UTF-8
 
+# macOS settings
+{{- if eq .chezmoi.os "darwin" }}
+# export PATH=$HOME/bin:/usr/local/bin:$PATH
+export PATH=/opt/homebrew/bin:$PATH
+ASDF_PREFIX=$(brew --prefix asdf)
+{{- end }}
+
+
 if [ -d "$HOME/.asdf" ]; then
   export PATH="$HOME/.asdf/shims:$PATH"
-  . $(brew --prefix asdf)/libexec/asdf.sh
+  . ${ASDF_PREFIX}/libexec/asdf.sh
 fi
 
 # vim keybindings
