--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -2,6 +2,9 @@ README.md
 install*.sh
 Brewfile
 dot_config/nvim/*.json
+.oh-my-zsh/cache/
+.oh-my-zsh/custom/themes/powerlevel10k/*.zwc
+.oh-my-zsh/custom/themes/powerlevel10k/*/*.zwc
 
 {{- if ne .chezmoi.os "darwin" }}
 dot_hammerspoon/
